# portfolio-v3

./: .gitignore  AGENTS.md  README.md  TODO.md  astro.config.mjs  astro.config.ts  ec.config.mjs  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: e2e-testing.yml
content/categories/: community.yaml  react.yaml
content/garden/: 2017-10-23--elitepvpers-wallpaper-2017.mdx  2019-02-05--gatsby-starter-portfolio-cara.mdx  2019-05-20--gatsby-starter-portfolio-jodie.mdx  2019-09-07--language-tabs-for-markdown-and-mdx-code-blocks.mdx  2019-10-30--creating-your-own-status-dashboard-with-gatsby.mdx  2020-01-16--adding-support-for-multiple-authors-in-gatsby.mdx  2020-01-18--filter-future-posts-on-a-gatsby-blog.mdx  2020-02-19--adding-line-numbers-and-code-highlighting-to-mdx.mdx  2021-04-05--what-is-a-digital-garden.mdx  2021-07-28--smooth-shadows-for-images-using-their-dominant-color.mdx  2022-02-10--replacing-ls-with-exa.mdx  2022-07-23--testing-gatsby-s-head-api-with-vitest-and-playwright.mdx  2022-09-13--my-favourite-hiking-apps.mdx  2023-08-28--creating-a-spacer-component.mdx  (+3 more)
patches/: unpic@3.18.0.patch
playwright/: kitchen-sink.spec.ts  meta.spec.ts  navigation.spec.ts  series.spec.ts
public/: _redirects  manifest.webmanifest  robots.txt
scripts/: Cargo.toml  ignore-title-case.txt  lint-title-case.ts  titlecase.ts  ultramatter.ts  writing.ts
scripts/fixtures/: v2-urls.txt
scripts/src/: lib.rs
scripts/tests/: lint_title_case_test.rs  writing_test.rs
src/: content.config.ts  env.d.ts
(+333 files in other folders)
