[package]
name = "scripts"
description = "Utility scripts for my website"
version = "0.1.0"
edition = "2021"
authors = [ "LekoArts" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
colored-diff = "=0.2.2"
dialoguer = "0.11.0"
glob = "0.3.1"
gray_matter = "0.2.8"
serde = { version = "1.0.210", features = [ "derive" ] }
serde_yaml = "0.9.34"
slug = "0.1.6"
titlecase = "3.3.0"

[dev-dependencies]
tempfile = "3.13.0"
